# chessify

./: Cargo.toml  Readme.md  tarpaulin-report.html
.github/workflows/: local.yml
scripts/: run.sh
src/: lib.rs  main.rs  startup.rs
src/domain/: evaluation_result.rs  fen.rs  mod.rs  score.rs
src/engine/: commands.rs  mod.rs  parser.rs  stockfish.rs
src/evaluator/: engine.rs  mod.rs  score_eval.rs
src/routes/: mod.rs
src/routes/fen/: evaluate_score.rs  evaluate_score_test.rs  mod.rs  score.rs
tests/: evaluate_score.rs  evaluate_score_tests.rs  fen_score.rs  health_check.rs  health_check_tests.rs  setup.rs
