[package]
name = "chessify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chessify"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
urlencoding = "2"

[dev-dependencies]
reqwest = "0.11"
claims = "0.7.0"
serde_json = "1.0.61"
serde_urlencoded = "0.7.1"
rstest = "0.18.2"
